--- a/Projet5/Views/Home/Index.cshtml
+++ b/Projet5/Views/Home/Index.cshtml
@@ -1,8 +1,53 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Accueil";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center mb-4">
+    <h1 class="display-4">Bienvenue dans notre concession</h1>
+    <p class="lead">Découvrez notre sélection de véhicules de qualité</p>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 mb-4">
+            <a asp-controller="Voitures" asp-action="Index" class="btn btn-primary">
+                Voir tous les véhicules disponibles
+            </a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Recherche par modèle</h5>
+                    <p class="card-text">Recherchez la voiture idéale en fonction de vos besoins.</p>
+                    <a href="#" class="btn btn-outline-primary">Rechercher</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Véhicules récents</h5>
+                    <p class="card-text">Découvrez nos dernières arrivées en stock.</p>
+                    <a href="#" class="btn btn-outline-primary">Nouveautés</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Notre engagement qualité</h4>
+                    <p class="card-text">
+                        Notre concession vous propose une sélection de véhicules soigneusement inspections et entretenus.
+                        Chaque voiture est vérifiée par nos mécaniciens qualifiés pour vous garantir sécurité et fiabilité.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
