--- a/Projet5/Views/Home/Index.cshtml
+++ b/Projet5/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center mb-4">
-    <h1 class="display-4">Bienvenue dans notre concession</h1>
+    <h1 class="display-4">Bienvenue chez Express Voitures</h1>
     <p class="lead">Découvrez notre sélection de véhicules de qualité</p>
 </div>
 
